[package]
name = "twitch-app"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
chrono = "0.4.38"
dotenv = "0.15.0"
reqwest = "0.12.4"
serde = { version = "1.0.201", features = ["serde_derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
twitch-irc = { version = "5.0.1", features = ["refreshing-token-native-tls"] }
